# call

./: .gitignore  Makefile  README.md  cmm.txt  path to the function calling results  pyproject.toml
data/correction/: function_calling_corrections.json
data/input/: accuracy_tests.json  function_calling_tests.json  malformed_tests.json  unmatched_test.json
llm_sdk/: __init__.py
src/: __init__.py  __main__.py  constrained_decoder.py  models.py  prompt_builder.py  test.py  test11.py  vocabulary.py
tests/: test_constrained_decoder.py
