[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding for LLMs"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "llm-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
]
